--- a/Maze_Algorithms.ipynb
+++ b/Maze_Algorithms.ipynb
@@ -9,53 +9,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|.|.|.|.|.|.|.|.|.|.|.|S|.|.|.|.|.|.|#|.|#|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|\n",
-      "|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|.|\n",
-      "|.|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|\n",
-      "|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|\n",
-      "|.|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|\n",
-      "|#|#|#|.|#|.|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|.|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|.|#|#|\n",
-      "|.|.|.|.|#|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|#|.|#|.|\n",
-      "|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|#|#|.|#|.|\n",
-      "|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|#|.|.|.|\n",
-      "|#|#|#|.|#|.|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|#|\n",
-      "|.|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|\n",
-      "|#|#|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|.|#|.|\n",
-      "|.|.|.|.|#|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|\n",
-      "|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|.|#|.|#|#|\n",
-      "|.|.|.|.|#|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|#|.|.|.|\n",
-      "|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|\n",
-      "|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
-      "|#|#|#|.|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|.|#|#|#|.|#|.|#|#|#|.|#|.|\n",
-      "|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|\n",
-      "|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|.|\n",
-      "|.|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|\n",
-      "|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|.|\n",
-      "|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|\n",
-      "|#|#|#|#|#|.|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|.|\n",
-      "|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|#|.|\n",
-      "|#|.|#|#|#|#|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|#|#|.|#|#|#|.|\n",
-      "|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|\n",
-      "|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|\n",
-      "|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|\n",
-      "|#|.|#|#|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|#|#|.|#|#|\n",
-      "|.|.|#|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|#|.|.|.|.|.|#|.|.|.|\n",
-      "|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|#|\n",
-      "|.|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|\n",
-      "|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|.|\n",
-      "|.|.|.|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|.|#|.|.|F|\n",
-      "|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|.|#|#|#|.|#|.|#|#|#|#|\n",
-      "|.|.|#|.|.|.|#|.|.|.|.|.|#|.|#|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|\n",
-      "|#|#|#|.|#|.|#|.|#|.|#|#|#|.|#|.|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|.|#|#|\n",
-      "|.|.|.|.|#|.|#|.|#|.|#|.|.|.|#|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|\n",
-      "|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|#|.|\n",
+      "(0, 10)\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|.|#|#|.|#|#|#|.|#|#|.|#|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|.|#|.|#|#|#|#|#|#|#|#|#|.|#|#|#|.|#|.|.|#|#|#|.|.|.|#|.|.|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|#|.|#|#|.|#|#|#|#|\n",
+      "|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|.|.|.|#|.|.|.|#|.|#|#|.|#|\n",
+      "|S|.|#|.|.|.|.|#|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|\n",
+      "|.|.|#|.|#|.|#|#|.|.|#|.|.|.|#|.|#|.|#|.|.|#|#|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|.|.|#|.|#|.|.|#|.|.|.|.|.|.|#|.|#|.|#|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|#|.|#|#|.|.|.|#|.|#|#|#|.|\n",
+      "|.|.|.|.|#|.|.|#|#|.|#|#|#|#|.|#|#|#|#|#|#|#|#|.|#|#|#|#|.|#|#|.|.|#|.|#|#|#|.|.|.|.|#|.|.|.|#|.|.|.|#|#|.|#|#|.|#|.|.|.|\n",
+      "|.|.|#|.|#|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|#|.|.|.|.|#|.|#|.|.|.|.|.|#|#|.|#|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|#|.|#|#|#|.|#|#|.|#|.|#|#|\n",
+      "|.|.|#|.|#|.|.|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|.|#|.|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|#|.|#|#|#|#|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|#|.|#|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|.|.|#|.|#|.|.|#|#|.|#|#|#|#|#|#|#|#|#|.|#|.|.|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|.|.|.|.|#|.|.|.|#|#|#|.|.|.|.|.|#|.|#|#|.|#|\n",
+      "|.|.|.|.|.|.|.|#|.|.|.|.|.|.|#|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|#|#|.|#|#|#|.|#|.|.|#|#|.|\n",
+      "|.|.|#|.|#|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|#|.|#|#|.|#|#|#|.|#|.|.|.|\n",
+      "|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|.|#|#|.|#|.|#|#|\n",
+      "|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|#|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|#|.|#|.|#|#|.|\n",
+      "|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|.|.|#|.|.|#|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|\n",
+      "|.|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|.|#|.|#|#|.|#|#|#|#|.|#|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|#|#|#|.|#|#|#|.|#|#|#|#|#|.|#|#|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|#|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|\n",
+      "|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|.|#|.|.|.|#|.|#|#|\n",
+      "|F|#|.|#|.|.|.|.|.|.|.|.|#|.|.|#|.|.|.|.|.|#|.|.|#|.|.|#|.|.|.|#|.|#|.|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|#|.|#|#|.|#|.|.|.|.|\n",
+      "|.|.|.|#|.|.|#|.|.|#|.|.|#|.|.|.|.|.|#|.|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|\n",
+      "|.|#|.|.|.|.|#|.|.|#|.|.|.|.|.|#|.|.|#|.|.|.|.|.|#|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|#|.|.|.|\n",
       "\n"
      ]
     }
@@ -576,10 +573,8 @@
     "                x = pos\n",
     "\n",
     "        self.stats[x] = \".\"\n",
-    "#         value = path[max_key][-1]\n",
     "        self.stats[max_key[0], max_key[1]] = \"F\"\n",
     "    \n",
-    "#     def stats():\n",
     "        \n",
     "\n",
     "def printFile(arr, filename):\n",
@@ -829,16 +824,21 @@
     "            val = dict[x, y]\n",
     "            if val == \"#\":\n",
     "                row.append(1)\n",
+    "            elif val == \"S\":\n",
+    "                row.append(2)\n",
+    "            elif val == \"F\":\n",
+    "                row.append(3)\n",
     "            else:\n",
     "                row.append(0)\n",
     "        arr.append(row)\n",
     "    return arr\n",
     "            \n",
     "g1 = graph(maze)\n",
-    "w = 40\n",
-    "h = 40\n",
-    "g1.primitive(w, h)\n",
-    "# g1.optimize_maze()\n",
+    "w = 60\n",
+    "h = 36\n",
+    "g1.make_room_maze(w, h)\n",
+    "g1.optimize_maze()\n",
+    "print(g1.start)\n",
     "g1.print_graph()\n",
     "arr = dictToArr(g1.stats,w,h)\n",
     "# game1 = MazeLevel(g1)\n",
@@ -875,60 +875,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,\n",
-      "1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,\n",
-      "0,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0,0,0,0,\n",
-      "1,0,1,0,1,1,1,0,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,1,1,\n",
-      "0,0,1,0,0,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,\n",
-      "1,1,1,0,1,0,1,1,1,0,1,1,1,1,1,1,1,0,1,0,1,0,1,1,1,1,1,1,1,0,1,0,1,1,1,0,1,0,1,\n",
-      "0,0,0,0,1,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,1,0,0,0,1,0,1,\n",
-      "1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,0,1,0,1,0,1,1,1,1,1,0,1,\n",
-      "0,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,1,0,1,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,1,0,0,\n",
-      "1,1,1,0,1,0,1,1,1,1,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,1,1,\n",
-      "0,0,0,0,1,0,0,0,0,0,0,0,1,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0,0,\n",
-      "1,1,1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,0,1,1,1,0,1,\n",
-      "0,0,0,0,1,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,\n",
-      "1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,1,1,1,1,1,1,0,1,0,1,0,1,\n",
-      "0,0,0,0,1,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,\n",
-      "1,1,1,0,1,1,1,1,1,0,1,0,1,1,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,\n",
-      "0,0,0,0,1,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,1,0,1,0,0,\n",
-      "1,1,1,0,1,1,1,0,1,0,1,0,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,0,1,1,1,0,1,0,1,1,1,0,1,\n",
-      "0,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,\n",
-      "1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,1,1,1,1,0,1,1,1,\n",
-      "0,0,0,0,1,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,1,\n",
-      "1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,1,1,0,1,0,1,0,1,1,1,1,1,0,1,1,1,1,1,1,1,0,1,0,1,\n",
-      "0,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,1,0,1,\n",
-      "1,1,1,1,1,0,1,1,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,1,1,\n",
-      "0,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,1,\n",
-      "1,0,1,1,1,1,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,1,1,1,1,0,1,1,1,\n",
-      "0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,1,0,0,0,0,0,1,0,1,0,1,0,0,0,0,0,0,0,0,0,0,0,1,\n",
-      "1,0,1,0,1,0,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,\n",
-      "0,0,1,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,\n",
-      "1,0,1,1,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,1,1,0,1,1,1,0,1,1,1,0,1,0,1,1,1,1,1,0,1,\n",
-      "0,0,1,0,0,0,0,0,0,0,1,0,1,0,1,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,1,0,0,0,0,0,1,0,0,\n",
-      "1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,1,1,0,1,\n",
-      "0,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,1,0,1,\n",
-      "1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,\n",
-      "0,0,0,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,1,0,0,0,1,0,0,\n",
-      "1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,1,1,0,1,1,1,0,1,0,1,1,1,\n",
-      "0,0,1,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,0,\n",
-      "1,1,1,0,1,0,1,0,1,0,1,1,1,0,1,0,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,1,1,1,1,0,1,\n",
-      "0,0,0,0,1,0,1,0,1,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,\n",
-      "1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,0,1,\n"
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,0,1,1,0,1,1,1,0,1,1,0,1,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,0,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,0,1,0,0,1,1,1,0,0,0,1,0,0,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,1,0,1,1,0,1,1,1,1,\n",
+      "1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,0,0,0,1,0,0,0,1,0,1,1,0,1,\n",
+      "2,0,1,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,1,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,0,0,\n",
+      "0,0,1,0,1,0,1,1,0,0,1,0,0,0,1,0,1,0,1,0,0,1,1,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "0,0,1,0,1,0,0,1,0,0,0,0,0,0,1,0,1,0,1,0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,1,0,0,0,1,1,0,1,1,0,0,0,1,0,1,1,1,0,\n",
+      "0,0,0,0,1,0,0,1,1,0,1,1,1,1,0,1,1,1,1,1,1,1,1,0,1,1,1,1,0,1,1,0,0,1,0,1,1,1,0,0,0,0,1,0,0,0,1,0,0,0,1,1,0,1,1,0,1,0,0,0,\n",
+      "0,0,1,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,1,0,0,0,0,1,0,1,0,0,0,0,0,1,1,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,1,0,0,0,1,1,0,1,1,1,0,1,1,0,1,0,1,1,\n",
+      "0,0,1,0,1,0,0,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,0,1,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "1,0,1,1,1,1,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,1,0,1,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "0,0,1,0,1,0,0,1,1,0,1,1,1,1,1,1,1,1,1,0,1,0,0,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,0,0,0,0,1,0,0,0,1,1,1,0,0,0,0,0,1,0,1,1,0,1,\n",
+      "0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,1,0,0,0,1,1,1,0,1,1,1,0,1,0,0,1,1,0,\n",
+      "0,0,1,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,1,0,0,0,1,1,0,1,1,0,1,1,1,0,1,0,0,0,\n",
+      "1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,0,1,1,1,0,1,1,1,0,1,1,1,0,1,1,0,1,0,1,1,\n",
+      "0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,\n",
+      "1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,1,0,1,0,1,1,0,\n",
+      "1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,0,0,1,0,0,1,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,\n",
+      "0,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,0,1,0,1,1,0,1,1,1,1,0,1,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,1,1,1,0,1,1,1,0,1,1,1,1,1,0,1,1,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,\n",
+      "1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,0,1,0,0,0,1,0,1,1,\n",
+      "3,1,0,1,0,0,0,0,0,0,0,0,1,0,0,1,0,0,0,0,0,1,0,0,1,0,0,1,0,0,0,1,0,1,0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,0,1,1,0,1,0,0,0,0,\n",
+      "0,0,0,1,0,0,1,0,0,1,0,0,1,0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,1,0,1,0,1,0,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,1,0,0,0,\n",
+      "0,1,0,0,0,0,1,0,0,1,0,0,0,0,0,1,0,0,1,0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,\n"
      ]
     }
    ],
    "source": [
     "for row in arr:\n",
     "    rowStr = \"\"\n",
-    "    for spot in row[:-1]:\n",
+    "    for spot in row:\n",
     "        rowStr += str(spot) + \",\"\n",
     "    print(rowStr)"
    ]
