updating generation primitive

--- a/Graph-Stats.ipynb
+++ b/Graph-Stats.ipynb
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4365,7 +4365,7 @@
     "maze_types = [\"original\", \"random_maze\", \"room_maze\", \"cellular_automaton\", \"primitive\", \"row_by_row\"]\n",
     "\n",
     "def analize(stat, by=\"area\"):\n",
-    "    df_all = pd.read_csv(\"Graph Stats1\")\n",
+    "    df_all = pd.read_csv(\"Mazes/Maze-Stats1\")\n",
     "    data_dict = {}\n",
     "    for i in range(len(maze_types)):\n",
     "        df_all.filter(like=maze_types[i])\n",
@@ -4406,7 +4406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4419,10 +4419,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x21f0920aa58>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x21f0ac12940>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4440,7 +4440,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"Graph Stats1\")\n",
+    "df = pd.read_csv(\"Mazes/Maze-Stats1\")\n",
     "\n",
     "colors = {'primitive': 'black', 'row_by_row': 'pink', 'cellular_automaton': 'red', 'random_maze': 'orange', 'room_maze': 'green', 'original': 'purple'}\n",
     "print(colors)\n",
@@ -4449,13 +4449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000021F0A282518>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000021F0ACA32E8>"
       ]
      },
      "metadata": {},
@@ -4532,7 +4532,7 @@
     "    plt.legend(loc='center left', bbox_to_anchor=(1.0, 0.5))\n",
     "\n",
     "    \n",
-    "df = pd.read_csv(\"Graph Stats1\")\n",
+    "df = pd.read_csv(\"Mazes/Maze-Stats1\")\n",
     "show_stats(df, ['pathLength', 'distFromStartToFinish'])\n",
     "# show_stats(df, ['walls', 'passages'])\n",
     "\n",
