--- a/Generation.ipynb
+++ b/Generation.ipynb
@@ -17,42 +17,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
-      "|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|\n",
-      "|.|#|.|.|.|#|.|#|.|.|.|.|#|.|.|.|.|#|.|#|.|.|#|.|.|.|#|.|.|#|.|.|.|#|.|#|.|.|#|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|#|.|.|#|.|#|.|.|.|.|#|.|.|.|.|.|.|#|.|.|#|.|.|.|#|.|#|.|.|#|.|.|#|#|#|.|#|#|#|#|#|.|#|#|#|#|#|.|#|.|.|\n",
-      "|.|#|#|.|#|#|.|#|.|#|.|.|.|.|#|.|.|#|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|.|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|.|#|.|#|#|#|#|.|#|.|#|#|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|#|.|.|.|.|\n",
-      "|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|#|.|#|.|.|\n",
-      "|.|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|#|.|#|.|#|.|#|.|.|#|.|.|.|#|.|.|.|.|#|.|.|#|.|.|#|.|.|.|.|#|.|#|.|.|#|.|#|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|\n",
-      "|.|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|#|.|.|.|.|.|#|.|#|.|.|.|.|#|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|#|.|#|.|.|.|#|.|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|#|.|.|#|.|.|.|.|#|.|.|.|.|.|#|.|#|.|#|.|.|.|.|.|#|.|.|\n",
-      "|#|.|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|.|#|\n",
-      "|.|#|.|.|.|#|.|#|.|.|.|.|.|#|.|.|.|.|.|#|.|#|.|.|#|.|#|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|F|#|.|.|.|.|.|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|#|.|.|#|.|.|#|.|.|#|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|#|.|#|.|#|.|.|#|.|.|.|.|#|.|.|#|.|#|#|#|.|#|#|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|.|#|.|.|.|.|.|#|.|.|.|.|#|.|.|#|.|#|.|.|.|#|.|#|.|.|.|.|.|.|#|.|.|#|.|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|\n",
-      "|.|.|.|.|.|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|.|.|#|.|#|.|#|#|#|.|#|.|.|\n",
-      "|.|#|#|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|.|#|.|S|\n",
-      "|.|#|.|#|#|#|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|.|#|#|.|#|.|#|#|.|.|#|.|#|.|.|\n",
-      "|.|#|#|.|#|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|#|.|#|#|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|#|.|.|\n",
-      "|.|#|#|.|#|#|.|.|.|.|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|.|#|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|#|.|#|#|.|.|.|.|.|#|.|.|.|.|#|.|.|#|.|#|.|.|#|.|.|.|.|#|.|.|#|.|#|.|.|#|.|.|#|.|.|#|.|#|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|#|.|.|#|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|#|.|#|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|.|#|#|#|.|.|.|#|.|.|.|#|.|#|.|#|.|.|#|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|#|.|#|.|.|#|.|.|.|.|.|#|.|#|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|.|.|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|#|.|.|#|.|.|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|.|#|.|#|.|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|#|.|#|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|.|#|#|.|#|.|.|.|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|#|#|#|.|.|.|.|#|.|#|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|#|#|#|#|#|#|.|#|#|#|#|.|#|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|#|.|#|.|.|#|.|#|.|#|.|.|#|.|.|.|#|.|#|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|#|.|.|#|.|#|.|.|\n",
-      "|.|#|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|.|#|.|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|.|#|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|#|.|.|#|.|#|.|.|\n",
+      "(13, 19)\n",
+      "|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|#|.|.|#|.|.|#|.|.|.|.|.|.|#|.|.|.|.|.|.|#|.|.|\n",
+      "|.|#|.|.|#|.|.|#|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|#|.|.|#|.|.|.|.|.|.|.|#|.|.|#|.|.|\n",
+      "|.|.|.|.|#|.|.|#|.|#|.|.|#|.|#|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|\n",
+      "|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
+      "|#|#|.|#|#|#|#|#|.|#|#|#|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
+      "|.|.|.|.|#|.|.|.|#|.|.|.|.|#|#|#|#|.|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|\n",
+      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
+      "|.|#|.|#|.|#|.|#|#|#|#|.|#|.|.|#|.|.|#|.|#|.|.|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|.|#|\n",
+      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|#|.|.|#|.|#|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|\n",
+      "|.|#|.|.|#|.|.|.|.|.|.|.|#|#|#|.|#|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|#|.|#|.|.|.|\n",
+      "|.|#|.|.|#|.|#|#|#|.|#|#|#|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|.|.|.|.|#|.|.|.|#|.|.|.|\n",
+      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|#|.|.|#|.|#|.|.|#|#|.|#|#|.|#|.|#|#|#|#|.|#|.|.|.|\n",
+      "|.|#|.|.|#|.|.|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|.|#|.|.|.|.|.|#|.|.|#|.|.|.|#|.|.|.|\n",
+      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|#|.|.|#|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|\n",
+      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|#|.|#|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|.|#|\n",
+      "|.|#|.|.|#|.|.|.|#|#|.|#|#|.|.|#|.|.|#|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|\n",
+      "|.|#|.|.|#|#|.|#|.|.|.|.|#|.|.|#|.|.|#|.|#|.|.|#|#|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|\n",
+      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|#|.|.|#|.|#|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|S|\n",
+      "|.|.|.|.|#|.|.|.|#|.|.|.|#|F|.|#|.|.|.|.|#|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|#|.|.|.|\n",
       "\n"
      ]
     }
@@ -568,6 +553,8 @@
     "            if cur_len > max_len:\n",
     "                max_key = key\n",
     "               \n",
+    "        print(max_key)\n",
+    "        \n",
     "        for pos, stat in self.stats.items():\n",
     "            if stat == \"F\":\n",
     "                x = pos\n",
@@ -834,8 +821,8 @@
     "    return arr\n",
     "            \n",
     "g1 = graph(maze)\n",
-    "w = 60\n",
-    "h = 36\n",
+    "w = 40\n",
+    "h = 20\n",
     "g1.make_room_maze(w, h)\n",
     "g1.optimize_maze()\n",
     "# print(g1.start)\n",
@@ -875,49 +862,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,\n",
-      "1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,\n",
-      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,\n",
-      "0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,\n",
-      "1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,\n",
-      "0,0,1,0,0,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,1,1,1,1,0,1,1,1,0,1,1,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,1,1,0,0,\n",
-      "0,0,1,0,1,1,0,1,0,0,1,0,0,1,0,0,0,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,0,1,0,0,1,0,0,\n",
-      "0,0,0,0,1,0,0,1,0,0,1,0,0,1,1,0,1,0,1,0,0,0,0,0,1,0,0,0,0,0,0,1,0,1,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,0,0,0,1,0,0,1,0,0,1,0,0,0,0,0,1,0,1,1,1,1,1,1,1,1,0,1,1,0,1,0,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,1,1,1,0,1,1,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,0,0,0,0,0,1,0,0,0,1,0,1,0,0,0,1,1,0,1,1,1,1,1,1,1,1,1,1,1,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,1,1,1,1,0,1,1,0,0,0,0,0,1,0,0,0,1,0,0,1,0,0,0,0,1,0,0,1,0,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,1,0,1,0,1,1,1,1,1,0,0,0,1,0,0,0,1,0,0,0,1,0,1,1,0,1,1,0,0,1,0,0,1,0,1,0,0,0,0,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,0,1,0,0,0,1,1,1,0,1,0,1,0,0,0,1,0,0,1,0,0,1,0,1,1,0,1,0,1,1,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,1,0,0,0,0,0,1,0,1,1,1,0,1,1,1,0,0,0,1,0,1,0,0,0,1,0,0,1,0,0,1,0,0,0,0,1,0,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,1,1,0,1,1,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,0,0,0,1,0,0,1,0,1,0,0,1,0,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,0,0,0,1,0,0,1,0,0,0,1,0,0,0,0,1,0,1,1,0,1,1,1,0,1,0,0,1,0,0,1,0,1,0,0,1,1,0,1,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,0,0,1,0,1,1,0,1,1,1,0,0,0,0,0,1,0,0,1,0,0,1,0,1,0,0,0,0,0,0,1,0,1,0,0,0,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,1,0,0,0,0,0,1,1,0,1,1,0,0,0,1,0,0,0,1,0,1,1,0,1,1,0,0,1,0,0,1,0,1,0,0,1,0,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,0,1,1,0,1,1,1,1,0,1,0,1,0,0,0,1,0,0,1,0,0,1,0,1,1,1,1,1,0,1,1,0,0,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,1,0,0,0,1,0,0,0,0,0,1,0,1,0,0,0,0,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,0,0,0,1,0,0,0,0,0,1,0,0,1,0,0,1,0,0,0,1,0,0,0,1,0,0,0,1,0,1,1,0,1,1,0,0,1,0,0,1,0,0,1,0,1,1,0,1,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,0,1,0,0,0,1,0,0,1,0,0,1,0,1,0,0,0,1,0,0,1,1,0,1,1,1,1,0,\n",
-      "0,0,0,0,1,0,0,0,0,0,1,0,1,0,0,1,0,0,0,1,0,0,0,0,1,0,1,0,0,0,0,1,0,0,1,1,0,1,0,0,1,0,0,1,0,1,1,0,1,0,0,0,1,0,0,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,1,0,0,1,0,0,0,1,0,1,0,0,1,0,1,0,1,1,0,1,0,1,0,0,0,1,0,0,1,0,0,1,0,1,0,0,0,1,0,0,1,0,1,0,1,1,0,0,\n",
-      "0,0,1,0,1,0,1,1,0,0,1,0,1,0,0,1,0,0,0,1,0,1,0,1,1,0,0,0,0,0,0,1,0,1,0,0,0,1,0,0,1,0,0,1,0,1,0,0,0,1,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,0,0,0,1,1,1,0,1,0,0,0,0,1,0,1,0,1,0,0,1,0,1,0,1,1,1,0,0,1,1,0,1,0,1,1,1,1,1,1,1,1,0,1,0,0,1,0,0,\n",
-      "0,0,1,0,1,0,0,1,0,0,1,0,1,0,1,1,0,0,0,1,0,1,0,0,1,0,1,1,1,0,1,1,0,1,1,1,0,1,0,0,1,0,0,0,0,1,0,0,0,0,0,0,1,0,1,0,0,0,0,0,\n",
-      "0,0,1,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,0,1,0,1,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,1,0,0,1,0,0,1,0,0,0,0,0,1,0,0,1,0,0,0,0,1,0,0,\n",
-      "1,1,1,1,1,1,0,1,1,0,1,0,1,0,0,0,0,0,0,1,0,1,0,0,1,0,1,0,0,0,0,1,0,1,0,0,0,1,0,0,1,0,0,1,0,1,0,0,0,1,0,0,1,0,1,0,0,1,0,0,\n",
-      "0,1,0,0,0,0,0,0,0,0,1,1,1,1,0,1,0,1,1,1,1,0,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,1,\n",
-      "0,0,0,0,1,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,1,3,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,\n",
-      "0,1,0,0,1,0,0,1,0,0,1,0,0,0,0,1,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,0,0,\n",
-      "1,1,1,0,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,0,1,1,1,0,1,1,\n",
-      "0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,\n",
-      "0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,0,0,\n"
+      "0,0,1,0,0,1,0,0,0,1,0,0,1,0,0,0,0,0,0,0,1,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,\n",
+      "0,0,1,0,0,0,0,0,0,0,0,0,1,0,1,1,1,1,1,0,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,0,1,1,1,\n",
+      "0,0,0,0,0,1,0,0,0,1,0,0,1,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,\n",
+      "1,0,1,1,1,0,1,1,1,1,1,1,1,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,\n",
+      "0,0,1,1,0,1,1,1,1,1,1,0,0,0,0,1,0,0,0,0,0,0,1,0,1,0,1,0,0,0,0,0,1,0,0,0,0,1,0,0,\n",
+      "0,0,1,0,0,0,0,0,0,0,0,0,1,0,0,0,0,1,0,0,1,0,1,0,1,0,0,0,0,0,1,0,0,0,0,1,0,0,0,0,\n",
+      "0,0,1,0,0,0,0,0,0,1,0,0,1,0,0,1,0,1,0,0,1,0,0,0,0,0,1,0,0,0,1,0,1,0,0,1,0,1,0,0,\n",
+      "1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,\n",
+      "0,0,0,0,0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,\n",
+      "1,1,1,0,1,1,1,1,1,1,0,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,0,1,\n",
+      "0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,\n",
+      "0,1,1,0,1,1,1,1,1,1,0,0,1,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,0,1,0,1,1,1,0,\n",
+      "0,1,0,1,0,0,0,0,0,1,0,0,1,0,0,0,1,0,0,1,0,0,1,0,0,0,0,0,0,1,0,0,0,0,1,0,0,1,0,0,\n",
+      "0,1,0,1,0,1,0,0,0,1,0,0,1,0,0,0,0,0,0,1,0,0,1,0,1,0,1,0,0,0,0,1,0,0,1,0,0,0,0,0,\n",
+      "0,1,0,0,0,1,0,0,0,1,0,0,1,0,0,0,1,0,0,0,0,0,0,0,1,0,1,0,0,1,0,1,0,0,1,0,0,1,0,0,\n",
+      "0,1,0,1,1,1,1,0,1,1,0,0,1,1,0,1,1,1,0,1,1,1,1,1,1,1,1,1,1,1,0,1,1,0,1,0,0,1,0,0,\n",
+      "0,0,0,0,0,0,0,0,0,1,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,0,0,1,0,0,\n",
+      "0,1,0,1,0,0,0,0,0,1,0,0,1,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,3,1,0,0,0,0,1,0,0,1,0,0,\n"
      ]
     }
    ],
