--- a/Generation.ipynb
+++ b/Generation.ipynb
@@ -10,34 +10,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(13, 19)\n",
-      "|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|#|.|.|#|.|.|#|.|.|.|.|.|.|#|.|.|.|.|.|.|#|.|.|\n",
-      "|.|#|.|.|#|.|.|#|.|.|.|.|#|.|#|.|.|.|.|.|#|.|.|#|.|.|#|.|.|.|.|.|.|.|#|.|.|#|.|.|\n",
-      "|.|.|.|.|#|.|.|#|.|#|.|.|#|.|#|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|\n",
-      "|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|\n",
-      "|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
-      "|#|#|.|#|#|#|#|#|.|#|#|#|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
-      "|.|.|.|.|#|.|.|.|#|.|.|.|.|#|#|#|#|.|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|\n",
-      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
-      "|.|#|.|#|.|#|.|#|#|#|#|.|#|.|.|#|.|.|#|.|#|.|.|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|.|#|\n",
-      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|#|.|.|#|.|#|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|\n",
-      "|.|#|.|.|#|.|.|.|.|.|.|.|#|#|#|.|#|#|#|#|#|#|.|#|#|#|.|#|#|#|.|#|#|#|#|.|#|.|.|.|\n",
-      "|.|#|.|.|#|.|#|#|#|.|#|#|#|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|.|.|.|.|#|.|.|.|#|.|.|.|\n",
-      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|#|.|.|#|.|#|.|.|#|#|.|#|#|.|#|.|#|#|#|#|.|#|.|.|.|\n",
-      "|.|#|.|.|#|.|.|.|#|.|#|#|#|.|#|#|#|.|#|.|#|.|.|#|.|.|.|.|.|#|.|.|#|.|.|.|#|.|.|.|\n",
-      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|#|.|.|#|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|\n",
-      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|#|.|#|.|#|#|#|#|.|#|#|#|#|#|#|#|.|#|.|#|.|#|\n",
-      "|.|#|.|.|#|.|.|.|#|#|.|#|#|.|.|#|.|.|#|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|\n",
-      "|.|#|.|.|#|#|.|#|.|.|.|.|#|.|.|#|.|.|#|.|#|.|.|#|#|#|.|#|.|#|#|#|.|#|#|#|#|#|.|#|\n",
-      "|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|#|.|.|#|.|#|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|S|\n",
-      "|.|.|.|.|#|.|.|.|#|.|.|.|#|F|.|#|.|.|.|.|#|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|#|.|.|.|\n",
+      "(31, 9)\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|#|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|#|.|.|.|\n",
+      "|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|.|.|.|.|.|.|.|#|.|#|.|.|#|.|.|.|#|.|.|.|.|.|\n",
+      "|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|#|.|#|.|.|#|.|.|.|#|.|#|.|.|.|\n",
+      "|.|.|.|.|.|.|#|.|.|#|.|#|.|#|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|#|#|.|#|\n",
+      "|.|.|.|#|.|.|#|.|.|#|.|#|.|.|.|.|.|#|.|#|.|.|#|.|.|.|.|.|.|.|#|.|.|#|.|.|.|.|.|.|\n",
+      "|#|#|.|#|#|#|#|.|#|#|.|#|.|#|.|.|.|#|.|#|.|.|#|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|\n",
+      "|.|.|.|#|.|.|.|.|.|.|.|#|#|#|#|.|#|#|.|.|.|.|.|.|.|.|#|.|.|.|#|.|#|#|#|#|#|#|.|#|\n",
+      "|#|.|#|#|.|#|#|.|#|#|.|#|.|.|#|.|.|#|#|#|#|#|#|.|#|#|#|.|#|#|.|.|.|#|.|.|#|.|.|.|\n",
+      "|.|.|.|#|.|.|.|.|.|#|.|#|.|.|#|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|.|.|\n",
+      "|.|.|.|.|.|#|.|.|.|#|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|#|F|.|#|.|.|#|.|.|.|\n",
+      "|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|#|\n",
+      "|.|.|.|.|#|.|.|.|.|#|.|.|#|.|.|.|.|#|.|.|.|.|.|.|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
+      "|.|.|#|.|#|.|.|#|.|.|.|.|#|.|#|.|.|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
+      "|.|.|#|.|.|.|.|#|.|#|.|.|.|.|#|.|.|#|#|.|#|#|#|#|#|#|#|#|#|#|#|#|#|#|.|#|#|#|#|#|\n",
+      "|#|#|#|#|#|#|#|#|.|#|#|#|#|.|#|#|#|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|.|\n",
+      "|.|.|.|.|.|.|.|.|.|.|.|.|#|.|#|.|.|#|.|.|.|.|#|.|.|.|#|#|.|#|#|#|#|.|#|#|#|#|#|#|\n",
+      "|#|#|.|#|#|#|#|#|.|#|#|#|#|.|.|.|.|#|#|#|#|.|#|.|#|#|#|.|.|.|.|.|#|.|.|.|.|.|.|.|\n",
+      "|.|#|.|.|.|.|#|.|.|.|.|.|#|.|#|#|.|#|.|#|.|.|.|.|.|.|#|.|#|.|#|#|#|#|.|#|#|#|#|.|\n",
+      "|.|.|.|.|#|.|#|.|#|.|.|.|#|.|.|.|.|#|.|#|.|.|#|.|.|.|#|.|.|.|.|.|#|.|.|.|.|.|.|.|\n",
+      "|.|#|.|.|#|.|.|.|#|S|.|.|.|.|#|.|.|#|.|.|.|.|#|.|.|.|#|.|#|.|.|.|.|.|.|.|#|.|.|.|\n",
       "\n"
      ]
     }
@@ -819,7 +819,8 @@
     "                row.append(0)\n",
     "        arr.append(row)\n",
     "    return arr\n",
-    "            \n",
+    "       \n",
+    "types_of_maze_generation = ['make_random_maze', 'divide_maze', 'make_room_maze', 'cellular_automaton', 'row_by_row', 'primitive']     \n",
     "g1 = graph(maze)\n",
     "w = 40\n",
     "h = 20\n",
