--- a/Maze Game - Genetic Algorithm.ipynb
+++ b/Maze Game - Genetic Algorithm.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This solves mazes using a Genetic Algorithm made by Jake Frischmann"
+    "# This solves mazes using a Genetic Algorithm \n"
    ]
   },
   {
@@ -30,24 +31,24 @@
       "['x', '-', '-', '-', 'x', 'F', '-', '-', 'x']\n",
       "['x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x']\n",
       "\n",
-      "Number of fit people in this generation: 27\n",
-      "An example of fit: [1, 1, 2, 2, 1, 1, 3, 4, 1, 2]\n",
+      "Number of fit people in this generation: 21\n",
+      "An example of fit: [3, 3, 3, 3, 4, 3, 4, 3, 3, 4]\n",
       "\n",
       "Now on to generation 1\n",
-      "Elite: 7506  Normal:0  Random: 7494\n",
+      "Elite: 7497  Normal:0  Random: 7503\n",
       "\n",
       "Printing maze...\n",
       "['x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x']\n",
       "['x', 'P', '-', 'P', '-', 'P', '-', '-', 'x']\n",
       "['x', '-', 'x', '-', 'x', '-', 'x', '-', 'x']\n",
       "['x', 'P', 'x', 'P', 'x', 'P', 'x', '-', 'x']\n",
-      "['x', '-', 'x', '-', '-', '-', 'x', '-', 'x']\n",
-      "['x', '-', 'x', 'P', 'x', 'x', 'x', '-', 'x']\n",
+      "['x', '-', 'x', '-', 'P', '-', 'x', '-', 'x']\n",
+      "['x', 'P', 'x', 'P', 'x', 'x', 'x', '-', 'x']\n",
       "['x', '-', '-', '-', 'x', 'F', '-', '-', 'x']\n",
       "['x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x']\n",
       "\n",
       "\n",
-      "These are the winning moves: [1]\n",
+      "These are the winning moves: [3]\n",
       "After 1 generations the solution has been found!\n"
      ]
     }
@@ -265,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3 (default, Mar 27 2019, 17:13:21) [MSC v.1915 64 bit (AMD64)]"
+   "version": "3.7.3"
   },
   "vscode": {
    "interpreter": {
