--- a/Graph-Stats.ipynb
+++ b/Graph-Stats.ipynb
@@ -4364,7 +4364,7 @@
     "\n",
     "maze_types = [\"original\", \"random_maze\", \"room_maze\", \"cellular_automaton\", \"primitive\", \"row_by_row\"]\n",
     "\n",
-    "def analize(stat, by=\"area\"):\n",
+    "def analyze(stat, by=\"area\"):\n",
     "    df_all = pd.read_csv(\"Mazes/Maze-Stats1\")\n",
     "    data_dict = {}\n",
     "    for i in range(len(maze_types)):\n",
@@ -4389,7 +4389,7 @@
     "#         df.plot()\n",
     "\n",
     "\n",
-    "analize(\"pathLength\")\n",
+    "analyze(\"pathLength\")\n",
     "dict1 = {\n",
     "    'col1': ['A', 'A', 'B', 'l', 'D', 'C'],\n",
     "    'col2': [2, 1, 9, 8, 7, 4],\n",
